2010-11-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinPort.h  [Bug #3110161]: Extensions using TCHAR don't compile
	on VS2005 SP1

2010-11-04  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/msgs/de.msg:  Updated German messages.  Thanks to Ruediger
        Haertel. [Patch 2442309] [Bug 3102739].

2010-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc        Update for VS10

2010-10-11  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c: Fix crash in 'tag add' / 'tag remove'
	commands when no -tags specified [Bug 3085489].

2010-10-06  Donal K. Fellows  <dkf@users.sf.net>

	* win/Makefile.in (genstubs): [Tcl Bug 3082049]: Typo.

2010-09-08  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c (TreeviewSeeCommand): [Bug 2829363]:
	Schedule redisplay if [$tv see] opens any items.

2010-09-02  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/winTheme.tcl, library/ttk/xpTheme.tcl,
	* library/ttk/vistaTheme.tcl: [Bug 3057573]: Specify disabled combobox
	text foreground color.

2010-09-01  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.9 TAGGED FOR RELEASE ***

	* changes:	Updated for 8.5.9 release.

	* doc/menu.n:  Formatting error.

2010-09-01  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/entry.tcl: Revert keyboard navigation bindings
	to use real events instead of virtual events.

2010-08-31  Andreas Kupries  <andreask@activestate.com>

	* win/tcl.m4: Applied patch by Jeff fixing issues with the
	manifest handling on Win64.
	* win/configure: Regenerated.

2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkText.c (DumpLine): [Bug 3053347]:
	s/segPtr->size/currentSize/ throughout, but particularly in if
	lineChanged block where segPtr may no longer be valid.

	* unix/Makefile.in: add valgrind target
	* unix/configure, unix/tcl.m4: [Bug 1230554]: SHLIB_LD_LIBS='${LIBS}'
	for OSF1-V*. Add /usr/lib64 to set of auto-search dirs.